@@ -10,11 +10,7 @@
   2                                        MCMCseed            Random number seed to start the MCMC: 0-let system clock determine seed.
   1                                        adapt               Use adaptation: 0-no, 1-yes.
   0.10                                     blockfrac           Fraction of uncorrelated updates that is updated as a block of all parameters (<=0.0: none, >=1.0: all).
-  
-  #Start from offset values:
-  1                                        offsetmcmc          Start the MCMC with offset initial parameters: 0-no: use injection parameters, 1-yes: randomly around the injected parameters, 2-yes: at the starting parameters, 3-yes: randomly around the starting parameters.  The individual parameters to be offset are determined in offsetpar below.
-  10.0                                     offsetx             Start the MCMC with an offset of x times the typical pdf sigma.
-    
+      
   #Correlated update proposals:
   2                                        corrupd             Do correlated update proposals: 0-no, 1-yes but update the matrix only once, 2-yes and update the matrix every ncorr iterations.
   0.7                                      corrfrac            Fraction of update proposals that is correlated (0.0-1.0, ~0.7 seems ok). corrupd must be 2. Should this replace corrupd?
@@ -33,9 +29,6 @@
   40.0                                     tempmax             Maximum temperature in automatic parallel-tempering ladder (equidistant in log(T)), typically 20-100, e.g. 50.
   100                                      savehotchains       Save hot (T>1) parallel-tempering chains: 0-no (just the T=1 chain), >0-yes; for every saved T=1 point, save every savehotchains-th hot point.
   2                                        prpartempinfo       Print information to screen on the temperature chains: 0-none, 1-some ladder info (default), 2-add chain-swap matrix.
-  
-  #Typical PDF widths (used for first correlation matrix and offset run):
-  0.0233   0.0252   0.0080   0.1000   0.1000   0.1000   0.1000   0.1000   0.1000   0.1000   0.1000   0.1000 
   
   #Manual temperature ladder for parallel tempering:
   1.00     2.00     4.00     0.00     0.00   
