@@ -1,29 +1,30 @@
   #MCMC-parameter input file for spinning MCMC code.  The LINE NUMBER for each parameter should not change!!!  For injection parameters, see mcmc.input
   
-  #Priors:
-  #Value:                                                                      Variable:                Description:
-  1                                                                            priorset                 Set of priors to use
+  #General:
+  #Value:                                  Variable:                Description:
+  1                                        priorSet                 Set of priors to use
+  1                                        offsetMCMC               Start the MCMC with offset initial parameters: 0-no: use injection parameters, 1-yes: randomly around the injected parameters, 2-yes: at the starting parameters, 3-yes: randomly around the starting parameters.
+  10.0                                     offsetX                  Start the MCMC with an offset of offsetX times the Sigma below
   
   
   #Parameters:                                                                 Priors:                                                Description:
   #Number:     ID:     BestValue:          Fix:     Start:     Sigma:          Type:     BoundLow:           BoundUp:                 
 
-  1            61      6.0836              0        4          0.1             11        3.000               12.000                   Mc             chirp mass (Mo)
-  2            62      0.2222              0        4          0.1             11        0.03                0.25                     eta            symmetric mass ratio (-)
-  3            11      894377000.00000     0        4          0.1             12        -0.05000            0.05000                  t_c            GPS time of coalescence (s)
-  4            22      2.8904              0        4          0.1             11        -6.9                4.6                      log(d_L)       log of luminosity distance (Mpc)
-  5            71      1.0000              0        4          0.1             11        0.000               1.000                    a_spin1        spin magnitude of object 1 (-)
-  6            72      0.1000              0        5          0.1             11        -1.000              1.000                    cos theta1     spin tilt of object 1 (-)
-  7            31      0.8000              0        5          0.1             21        0.0                 6.28                     alpha          right ascension (rad)
-  8            32      0.9000              0        5          0.1             11        -1.000              1.000                    sin(delta)     sin declination (-)
-  9            41      1.5000              0        5          0.1             21        0.0                 6.28                     phi_c          binary phase at coalescence (rad)
- 10            53      0.5000              0        5          0.1             11        -1.000              1.000                    sin(theta_J0)  orientation of J0 (-)
- 11            54      2.0000              0        5          0.1             21        0.0                 6.28                     phi_J0         orientation of J0 (rad)
- 12            73      1.5000              0        5          0.1             21        0.0                 6.28                     phi1           spin phase of object 1 (rad)
+  1            61      6.0836              0        4          0.0233          11        3.000               12.000                   Mc             chirp mass (Mo)
+  2            62      0.2222              0        4          0.0252          11        0.03                0.25                     eta            symmetric mass ratio (-)
+  3            11      894377000.00000     0        4          0.0080          12        -0.05000            0.05000                  t_c            GPS time of coalescence (s)
+  4            22      2.8904              0        4          0.1000          11        -6.9                4.6                      log(d_L)       log of luminosity distance (Mpc)
+  5            71      1.0000              0        4          0.1000          11        0.000               1.000                    a_spin1        spin magnitude of object 1 (-)
+  6            72      0.1000              0        5          0.1000          11        -1.000              1.000                    cos theta1     spin tilt of object 1 (-)
+  7            31      0.8000              0        5          0.1000          21        0.0                 6.28                     alpha          right ascension (rad)
+  8            32      0.9000              0        5          0.1000          11        -1.000              1.000                    sin(delta)     sin declination (-)
+  9            41      1.5000              0        5          0.1000          21        0.0                 6.28                     phi_c          binary phase at coalescence (rad)
+ 10            53      0.5000              0        5          0.1000          11        -1.000              1.000                    sin(theta_J0)  orientation of J0 (-)
+ 11            54      2.0000              0        5          0.1000          21        0.0                 6.28                     phi_J0         orientation of J0 (rad)
+ 12            73      1.5000              0        5          0.1000          21        0.0                 6.28                     phi1           spin phase of object 1 (rad)
   
-
-
-
+  
+  
  ###################################################################################################################################################################################
  Explanation:
  
